[gd_scene load_steps=2 format=3 uid="uid://btyi4ud1hml6s"]

[ext_resource type="Script" path="res://Levels/Scripts/SettingsMenu.gd" id="1_ayd6b"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayd6b")

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsBar" type="TabBar" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.005
anchor_right = 0.995
anchor_bottom = 0.05
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
tab_count = 4
tab_0/title = "Игра"
tab_1/title = "Экран"
tab_2/title = "Звук"
tab_3/title = "Управление"

[node name="SettingsGamePanel" type="Panel" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.07
anchor_right = 0.99
anchor_bottom = 0.85

[node name="Label" type="Label" parent="SettingsPanel/SettingsGamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Игровые настройки"

[node name="SettingsScreenPanel" type="Panel" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.07
anchor_right = 0.99
anchor_bottom = 0.85

[node name="SettingsScreenGroup" type="ReferenceRect" parent="SettingsPanel/SettingsScreenPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
border_width = 0.0

[node name="WindowModeGroup" type="ReferenceRect" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
border_color = Color(0.686275, 0.686275, 0.686275, 1)
border_width = 2.0
editor_only = false

[node name="DisplayMode" type="OptionButton" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup/WindowModeGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
language = "ru_RU"
item_count = 3
selected = 0
popup/item_0/text = "Оконный"
popup/item_0/id = 0
popup/item_1/text = "Полный экран (рамка)"
popup/item_1/id = 1
popup/item_2/text = "Полный экран"
popup/item_2/id = 2

[node name="Label" type="Label" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup/WindowModeGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
text = "режим окна"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
language = "ru_RU"

[node name="VsyncGroup" type="ReferenceRect" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
border_color = Color(0.686275, 0.686275, 0.686275, 1)
border_width = 2.0
editor_only = false

[node name="VSYNC" type="OptionButton" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup/VsyncGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.05176e-05
alignment = 1
language = "ru_RU"
item_count = 3
selected = 0
popup/item_0/text = "Отключен"
popup/item_0/id = 0
popup/item_1/text = "Включен"
popup/item_1/id = 1
popup/item_2/text = "Адаптивный"
popup/item_2/id = 2

[node name="Label" type="Label" parent="SettingsPanel/SettingsScreenPanel/SettingsScreenGroup/VsyncGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
text = "VSYNC"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
language = "ru_RU"

[node name="SettingsSoundPanel" type="Panel" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.07
anchor_right = 0.99
anchor_bottom = 0.85

[node name="SettingsSoundGroup" type="ReferenceRect" parent="SettingsPanel/SettingsSoundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
border_width = 0.0

[node name="MusicGroup" type="ReferenceRect" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
border_color = Color(0.686275, 0.686275, 0.686275, 1)
border_width = 2.0
editor_only = false

[node name="Label" type="Label" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup/MusicGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
text = "громкость музыки"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
language = "ru_RU"

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup/MusicGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
min_value = -60.0
max_value = 0.0
tick_count = 5
ticks_on_borders = true

[node name="SoundGroup" type="ReferenceRect" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
border_color = Color(0.686275, 0.686275, 0.686275, 1)
border_width = 2.0
editor_only = false

[node name="Label" type="Label" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup/SoundGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
text = "громкость звуков"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
language = "ru_RU"

[node name="SoundSlider" type="HSlider" parent="SettingsPanel/SettingsSoundPanel/SettingsSoundGroup/SoundGroup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.05176e-05
min_value = -70.0
max_value = 0.0
tick_count = 5
ticks_on_borders = true

[node name="SettingsControllPanel" type="Panel" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.07
anchor_right = 0.99
anchor_bottom = 0.85

[node name="Label" type="Label" parent="SettingsPanel/SettingsControllPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Настройки управления"

[node name="BackButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.9
anchor_right = 0.17
anchor_bottom = 0.97
theme_override_font_sizes/font_size = 25
text = "назад"

[node name="ApplyButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.9
anchor_right = 0.34
anchor_bottom = 0.97
theme_override_font_sizes/font_size = 25
text = "применить"

[node name="SaveLabel" type="Label" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.9
anchor_right = 0.98
anchor_bottom = 0.97
text = "сохранено"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
language = "ru_RU"

[node name="SaveLabelTimer" type="Timer" parent="SettingsPanel"]
wait_time = 0.1

[connection signal="tab_selected" from="SettingsPanel/SettingsBar" to="." method="_on_settings_bar_tab_selected"]
[connection signal="pressed" from="SettingsPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsPanel/ApplyButton" to="." method="_on_apply_button_pressed"]
